# cppGen

./: .gitignore  .gitmodules  index.ts  package-lock.json  package.json  tsconfig.json
common/: messageHelps.h
examples/websocketComms/: README.md
examples/websocketComms/cpp/: CMakeLists.txt  main.cpp  serve.sh
examples/websocketComms/cpp/build.emscripten/: index.html  sockets.mjs
examples/websocketComms/websock/: CMakeLists.txt  main.cpp
src/: APILoader.ts  fileHelps.ts  genAll.ts  genDump.ts  genIdentifiers.ts  genJs.ts  genJsBind.ts  genPrimitive.ts  genProxy.ts  genSerialize.ts  genVariants.ts  genWasm.ts  parseTemplate.ts
src/common/: TransportBase.h  common.h  commonSocket.h  messageHelps.h
src/common/core/: Dbg.h  core.h  demangle.h  endianHelp.h  traits.h
src/common/js/: common.cpp  js.cpp  package-lock.json  package.json
src/common/js/msg/: builders.cpp  handlers.cpp  logHelpers.cpp  msg.cpp  valHelpers.cpp
src/common/js/sockets/: emScriptenSocket.cpp  sockets.ts
src/common/js/wasm/: PtrHelpers.cpp  PtrHelpers.ts
src/common/lib/wsServer/: WSServer.hpp
src/old/: genEmbind.ts  genProto.ts
src/tmpl/: DebugDump.ejs  DebugDump_prelude.cpp  DebugDump_prelude.ejs  Embind.ejs  Embind_prelude.cpp  Identifiers.ejs  JsBind_prelude.cpp  JsDecl.ejs  JsDecl_prelude.ts  PrimitiveType.ejs  Protobuf.ejs  Protobuf_prelude.ejs  Proxy.ejs  Proxy_prelude.cpp  Proxy_prelude.ejs  Variants.ejs  serializeBin.ejs  serializeBin_prelude.cpp  serializeBin_prelude.ejs
src/wasm/: CMakeLists.txt  main.cpp  proxyHelpers.ts
test/: .gitignore  build.sh
test/messages/: CMakeLists.txt  MessageAPI.h  main.cpp  uapi.json
test/serialization/: CMakeLists.txt  RootAPI.h  SerializeAPI.h  build.sh  main.cpp  uapi.json
test/wasm/: WasmAPI.h  build.sh  package-lock.json  package.json  test.ts  tsconfig.json  tstHelps.ts  uapi.json
